[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemies/nestSpawn.png" type="Texture" id=1]
[ext_resource path="res://enemies/nest.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.23607

[node name="Nest" type="Node2D" groups=["nest"]]
script = ExtResource( 2 )

[node name="NestSpawn" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["nest"]]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="randTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="randTimer" to="." method="_on_randTimer_timeout"]
